Fix height of echo counter badges being a little bit too tall
HT to Jack Phoenix :)

--- a/refreshed/extensions/Echo/echo.badge.less
+++ b/refreshed/extensions/Echo/echo.badge.less
@@ -10,6 +10,7 @@
 		margin: 0.9em 0.2em 0 0;
 		a {
 			color: transparent;
+			line-height: 1.5em;
 		}
 		&:hover {
 			background: none;
